@@ -95,17 +95,17 @@ SaveOnStatusChange 1
 # enable / disable logging (0 = disabled, 1 = logfile, 2 = syslog)
 UseLogging 2
 
-# create db directory if missing (1 = enabled, 0 = disabled)
-CreateDBDir 1
+# create dirs if needed (1 = enabled, 0 = disabled)
+CreateDirs 1
 
-# update ownership of files when needed (1 = enabled, 0 = disabled)
+# update ownership of files if needed (1 = enabled, 0 = disabled)
 UpdateFileOwner 1
 
 # file used for logging if UseLogging is set to 1
-LogFile "/var/log/vnstat.log"
+LogFile "/var/log/vnstat/vnstat.log"
 
 # file used as daemon pid / lock file
-PidFile "/var/run/vnstat.pid"
+PidFile "/var/run/vnstat/vnstat.pid"
 
 
 # vnstati
